--- a/monitoring.html.md.erb
+++ b/monitoring.html.md.erb
@@ -13,12 +13,14 @@ The Health Monitor is extended by a set of plugins. Each plugin is given an oppo
 
 Health Monitor includes the following plugins:
 
-- Event Logger: Logs all events to a file
+- Event Logger: Logs events to a file
 - Resurrector: Recreates VMs that have stopped heartbeating
 - Emailer: Sends configurable e-mails on events reciept
-- PagerDuty: Sends various events to [PagerDuty.com](http://pagerduty.com) using their API
-- DataDog: Sends various events to [DataDog.com](http://datadoghq.com) using their API
-- AWS CloudWatch: Sends various events to [Amazon's CloudWatch](http://aws.amazon.com/cloudwatch/) using their API
+- OpenTSDB: Sends events to [OpenTSDB](http://opentsdb.net/)
+- Graphite: Sends events to [Graphite](https://graphite.readthedocs.org/en/latest/)
+- PagerDuty: Sends events to [PagerDuty.com](http://pagerduty.com) using their API
+- DataDog: Sends events to [DataDog.com](http://datadoghq.com) using their API
+- AWS CloudWatch: Sends events to [Amazon's CloudWatch](http://aws.amazon.com/cloudwatch/) using their API
 
 See [Configuring Health Monitor](hm-config.html) for detailed plugins' configuration.
 
