pull out cpis into its own section

--- a/aws-cpi.html.md.erb
+++ b/aws-cpi.html.md.erb
@@ -209,3 +209,6 @@ Non-Windows instances with a virtualization type of 'hvm' are currently not supp
 ```
 
 You cannot use HVM stemcells with certain instance types. Review which instance type is specified in a referenced resource pool.
+
+---
+Next: [Using IAM instance profiles](aws-iam-instance-profiles.html)
