--- a/aws-instance-storage.html.md.erb
+++ b/aws-instance-storage.html.md.erb
@@ -28,3 +28,8 @@ bosh_caxspafr6@09f1a2db-f322-487c-bd03-63bf0d367f3d:~$ ls -la /dev/disk/by-partl
 lrwxrwxrwx 1 root root 12 Oct  5 03:09 /dev/disk/by-partlabel/raw-ephemeral-0 -> ../../xvdba1
 lrwxrwxrwx 1 root root 12 Oct  5 03:09 /dev/disk/by-partlabel/raw-ephemeral-1 -> ../../xvdbb1
 </pre>
+
+---
+[Back to Table of Contents](index.html#cpi-config)
+
+Previous: [Using IAM instance profiles](aws-iam-instance-profiles.html)
