--- a/azure-cpi.html.md.erb
+++ b/azure-cpi.html.md.erb
@@ -104,3 +104,6 @@ properties:
       QAoeQbGmV50ZQk/VsgmFMBoFXntIs5EKkjO6fL4MsD9QtSkiHMkqwIQ20+NNqp3j
       -----END CERTIFICATE-----
 ```
+
+---
+[Back to Table of Contents](index.html#cpi-config)
