--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -62,16 +62,18 @@ title: Index
  * [Networks](networks.html)
  * [Persistent disks](persistent-disks.html)
  * [Trusted certificates](trusted-certs.html)
- * IaaS specifics
-    * [AWS](aws-cpi.html)
-        * [Using IAM instance profiles](aws-iam-instance-profiles.html)
-        * [Using instance storage](aws-instance-storage.html)
-    * [OpenStack](openstack-cpi.html)
-        * [Using Keystone v3 API](openstack-keystonev3.html)
-    * [vSphere](vsphere-cpi.html)
-    * [vCloud](vcloud-cpi.html)
-    * [Azure](azure-cpi.html) **[beta]**
-    * [Warden/Garden](warden-cpi.html)
+
+### <a id="cpi-config"></a> Detailed CPI Configuration & Troubleshooting
+
+* [AWS](aws-cpi.html)
+    * [Using IAM instance profiles](aws-iam-instance-profiles.html)
+    * [Using instance storage](aws-instance-storage.html)
+* [OpenStack](openstack-cpi.html)
+    * [Using Keystone v3 API](openstack-keystonev3.html)
+* [vSphere](vsphere-cpi.html)
+* [vCloud](vcloud-cpi.html)
+* [Azure](azure-cpi.html) **[beta]**
+* [Warden/Garden](warden-cpi.html)
 
 ### <a id="hm"></a> Health Management of VMs and Processes
 
