--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -152,3 +152,6 @@ Image `4c1d6840-6ac7-4b42-bf29-c95fef6d986e' not found
 ```
 
 It's possible that image was deleted from OpenStack directly and BOSH is not aware of it. You can recover with `bosh upload stemcell X --fix` to reupload the stemcell.
+
+---
+Next: [Using Keystone v3 API](openstack-keystonev3.html)
