--- a/openstack-keystonev3.html.md.erb
+++ b/openstack-keystonev3.html.md.erb
@@ -27,3 +27,8 @@ title: Using Keystone API v3
     ```
 
 1. Deploy the Director
+
+---
+[Back to Table of Contents](index.html#cpi-config)
+
+Previous: [OpenStack](openstack-cpi.html)
