--- a/tips.html.md.erb
+++ b/tips.html.md.erb
@@ -2,6 +2,13 @@
 title: Tips
 ---
 
+This document lists several common problems. If you are looking for CPI specific errors see:
+
+- [AWS CPI errors](aws-cpi.html#errors)
+- [OpenStack CPI errors](openstack-cpi.html#errors)
+- [vSphere CPI errors](vsphere-cpi.html#errors)
+
+---
 ## Debugging Director database
 
 Rarely it's necessary to dive into the Director DB. The easiest way to do so is to SSH into the Director VM and use `director_ctl console`. For example:
