--- a/aws-iam-instance-profiles.html.md.erb
+++ b/aws-iam-instance-profiles.html.md.erb
@@ -53,7 +53,7 @@ You may have to create one or more IAM instance profiles to limit access to AWS 
     ```
 
     <p class="note">Note: To use IAM instance profile as a credentials source when using bosh-init, you have to run bosh-init from a <a href="terminology.html#jumpbox">jump box</a>, an existing AWS instance with IAM instance profile (you can reuse `director` IAM role). Alternatively if you are deploying the Director VM from outside of the AWS, you can use hard coded credentials with bosh-init and have the AWS CPI on the Director VM use IAM instance profile as a credentials source.</p>
-    
+
     <p class="note">Note: Even though value specified is `env_or_profile`, bosh-init or the Director do not currently take advantage of the environment variables, only instance the profile, hence to take advantage of this feature you have to run on an AWS instance.</p>
 
 ---
@@ -134,3 +134,8 @@ $ aws sts decode-authorization-message --encoded-message vHU-KncL6Yo4pG5J9p...
 </pre>
 
 Decoded message above indicates that `iam:PassRole` action needs to be added to the `director` IAM role so that the AWS CPI can create VMs with `deployed-vm` IAM role.
+
+---
+Next: [Using instance storage](aws-instance-storage.html)
+
+Previous: [AWS](aws-cpi.html)
