--- a/warden-cpi.html.md.erb
+++ b/warden-cpi.html.md.erb
@@ -95,3 +95,6 @@ properties:
 ## <a id='notes'></a> Notes
 
 * Garden server does not have a UI; however, you can use [gaol CLI](https://github.com/xoebus/gaol) to interact with it directly.
+
+---
+[Back to Table of Contents](index.html#cpi-config)
