--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -7,90 +7,95 @@ Before bootstrapping a new [environment](terminology.html#environment) we recomm
 <%= image_tag("images/bosh-architecture.png") %>
 
 ---
-## <a id="cli"></a>Command Line Interface (CLI)
+## <a id="bosh-init"></a> bosh-init
 
-The Command Line Interface (CLI) is the primary operator interface to BOSH. An operator uses the CLI to interact with the BOSH Director and perform actions on the cloud.
+bosh-init is tool used for creating and updating the Director (its VM and persistent disk) in an environment.
+
+---
+## <a id="cli"></a> Command Line Interface (CLI)
+
+The Command Line Interface (CLI) is the primary operator interface to BOSH. An operator uses the CLI to interact with the Director and perform actions on the cloud.
 
 CLI is typically installed on a machine that can directly communicate with the Director's API, e.g. an operator's laptop, or a jumpbox in the datacenter.
 
 ---
-## <a id="director"></a>Director
+## <a id="director"></a> Director
 
-The BOSH Director is the core orchestrating component in BOSH. The Director controls VM creation and deployment, as well as other software and service lifecycle events.
+The Director is the core orchestrating component in BOSH. The Director controls VM creation and deployment, as well as other software and service lifecycle events.
 
 The Director creates actionable tasks:
 
-* By translating commands sent by an operator through the BOSH CLI
+* By translating commands sent by an operator through the CLI
 * From scheduled processes like backups or snapshots
 * If needed to reconcile the expected state with the actual state of a VM
 
 Once created, the Director adds these tasks to the Task Queue. Worker processes take tasks from the Task Queue and act on them.
 
-### <a id="queue"></a>Task Queue
+### <a id="queue"></a> Task Queue
 
 An asynchronous queue used by the Director and Workers to manage tasks. The Task Queue resides in a Redis key-value store.
 
-### <a id="workers"></a>Workers
+### <a id="workers"></a> Workers
 
 Director workers take tasks from the Task Queue and act on them.
 
-### <a id="cpi"></a>Cloud Provider Interface (CPI)
+### <a id="cpi"></a> Cloud Provider Interface (CPI)
 
 A Cloud Provider Interface (CPI) is an API that the Director uses to interact with an IaaS to create and manage stemcells, VMs, and disks. A CPI abstracts infrastructure differences from the rest of BOSH.
 
 ---
-## <a id="health-monitor"></a>Health Monitor
+## <a id="health-monitor"></a> Health Monitor
 
 The Health Monitor uses status and lifecycle events received from Agents to monitor the health of VMs. If the Health Monitor detects a problem with a VM, it can send an alert through notification plugins, or trigger the Resurrector.
 
-### <a id="resurrector"></a>Resurrector
+### <a id="resurrector"></a> Resurrector
 
 If enabled, the Resurrector plugin automatically recreates VMs identified by the Health Monitor as missing or unresponsive. It uses same Director API that CLI uses.
 
 ---
-## <a id="dns"></a>DNS Name Server
+## <a id="dns"></a> DNS Server
 
 BOSH uses PowerDNS to provide DNS resolution between the VMs in a deployment.
 
 ---
-## <a id="persistent"></a>Components used to store Director's Persistent Data
+## <a id="persistent"></a> Components used to store Director's persistent data
 
-### <a id="database"></a>Database
+### <a id="database"></a> Database
 
-The Director uses a Postgres database to store information about the desired state of a BOSH deployment. This includes information about stemcells, releases, and deployments.
+The Director uses a Postgres database to store information about the desired state of a deployment. This includes information about stemcells, releases, and deployments.
 
-### <a id="blobstore"></a>Blobstore
+### <a id="blobstore"></a> Blobstore
 
-The BOSH Blobstore stores the source forms of releases and the compiled images of BOSH releases. An operator uploads a release using the BOSH CLI, and the Director inserts the release into the Blobstore. When you deploy a release, BOSH orchestrates the compilation of packages and stores the result in the Blobstore.
+The Blobstore stores the source forms of releases and the compiled images of releases. An operator uploads a release using the CLI, and the Director inserts the release into the Blobstore. When you deploy a release, BOSH orchestrates the compilation of packages and stores the result in the Blobstore.
 
 ---
-## <a id="agent"></a>Agent
+## <a id="agent"></a> Agent
 
 BOSH includes an Agent on every VM that it deploys. The Agent listens for instructions from the Director and carries out those instructions. The Agent receives job specifications from the Director and uses them to assign a role, or Job, to the VM.
 
 For example, to assign the job of running MySQL to a VM, the Director sends instructions to the Agent on the VM. These instructions include which packages to install and how to configure those packages. The Agent uses these instructions to install and configure MySQL on the VM.
 
 ---
-## <a id="comm"></a>Components used for cross-component communication
+## <a id="comm"></a> Components used for cross-component communication
 
-### <a id="nats"></a>Message Bus (NATS)
+### <a id="nats"></a> Message Bus (NATS)
 
 The Director and the Agents communicate through a lightweight publish-subscribe messaging system called NATS. These messages have two purposes: to perform provisioning instructions on the VMs, and to inform the Health Monitor about changes in the health of monitored processes.
 
-### <a id="registry"></a>Registry
+### <a id="registry"></a> Registry
 
 When the Director creates or updates a VM, it stores configuration information for the VM in the Registry so that it can be used during bootstrapping stage of the VM.
 
 ---
-## <a id="example"></a>Example Component Interaction
+## <a id="example"></a> Example component interaction
 
-This example shows how BOSH components interact when creating a new VM.
+This example shows how components interact when creating a new VM.
 
-### <a id="create-vm"></a>Creating a New VM
+### <a id="create-vm"></a> Creating a new VM
 
 <%= image_tag("images/deploy-sequence.png") %>
 
-1. Through the BOSH CLI, the operator takes an action (e.g. deploy for the first time, scaling up deployment) which requires creating a new VM.
+1. Through the CLI, the operator takes an action (e.g. deploy for the first time, scaling up deployment) which requires creating a new VM.
 1. The CLI passes the instruction to the Director.
 1. The Director uses the CPI to tell the IaaS to launch a VM.
 1. The IaaS provides the Director with information (IP addresses and IDs) the Agent on the VM needs to configure the VM.
