--- a/migrate-to-bosh-init.html.md.erb
+++ b/migrate-to-bosh-init.html.md.erb
@@ -2,7 +2,7 @@
 title: Migrating to bosh-init from the micro CLI plugin
 ---
 
-The micro CLI plugin will soon be deprecated and discontinued in a few months. `bosh-init` replaces its functionality and improves on its features. If you do not maintain a MicroBOSH VM, there is no need to do anything; however, if you do please follow these steps:
+The micro CLI plugin is deprecated and will be discontinued in a few months. `bosh-init` replaces its functionality and improves on its features. If you do not maintain a MicroBOSH VM, there is no need to do anything; however, if you do please follow these steps:
 
 1. [Install bosh-init](install-bosh-init.html).
 
