--- a/trusted-certs.html.md.erb
+++ b/trusted-certs.html.md.erb
@@ -2,7 +2,7 @@
 title: Trusted Certificates
 ---
 
-<p class="note"><strong>Note</strong>: This feature is available with bosh-release v176+ (1.2992.0) and stemcells v2992+.</p>
+<p class="note">Note: This feature is available with bosh-release v176+ (1.2992.0) and stemcells v2992+.</p>
 
 This document describes how to configure the Director to add a set of trusted certificates to all VMs managed by that Director. Configured trusted certificates are added to the default certificate store on each VM and will be automatically seen by the majority of software (e.g. curl).
 
