mention migrating vsphere datastores

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -71,6 +71,7 @@ title: Index
 * [OpenStack](openstack-cpi.html)
     * [Using Keystone v3 API](openstack-keystonev3.html)
 * [vSphere](vsphere-cpi.html)
+    * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
 * [vCloud](vcloud-cpi.html)
 * [Azure](azure-cpi.html) **[beta]**
 * [Warden/Garden](warden-cpi.html)
