--- a/vsphere-cpi.html.md.erb
+++ b/vsphere-cpi.html.md.erb
@@ -209,4 +209,4 @@ Failed to add disk scsi0:2.
 This error typically occurs when persistent disk is being attached to a second VM while it is attached to another VM. That may happen when first VM was not properly deleted and BOSH is no longer aware of its existence.
 
 ---
-[Back to Table of Contents](index.html#cpi-config)
+Next: [Migrating from one datastore to another](vsphere-migrate-datastores.html)
