mention registry basic auth

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -70,6 +70,7 @@ title: Index
     * [Using instance storage](aws-instance-storage.html)
 * [OpenStack](openstack-cpi.html)
     * [Using Keystone v3 API](openstack-keystonev3.html)
+    * [Extended Registry configuration](openstack-registry.html)
 * [vSphere](vsphere-cpi.html)
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
 * [vCloud](vcloud-cpi.html)
