--- a/openstack-keystonev3.html.md.erb
+++ b/openstack-keystonev3.html.md.erb
@@ -4,7 +4,7 @@ title: Using Keystone API v3
 
 <p class="note">Note: This feature is available with bosh-release v218+ (1.3120.0) colocated with bosh-openstack-cpi v15+.</p>
 
-[The default template](init-openstack.html#create-manifest) provided for bosh-init configure authentication using the Keystone v2 API. This document describes how to use Keystone v3, e.g. if you want to make use of Domains in your OpenStack installation.
+[The default template](init-openstack.html#create-manifest) provided for bosh-init configures authentication using the Keystone v2 API. This document describes how to use Keystone v3, i.e. if you want to make use of Domains in your OpenStack installation.
 
 1. Configure OpenStack CPI
 
@@ -29,6 +29,6 @@ title: Using Keystone API v3
 1. Deploy the Director
 
 ---
-[Back to Table of Contents](index.html#cpi-config)
+Next: [Extended Registry configuration](openstack-registry.html)
 
 Previous: [OpenStack](openstack-cpi.html)
