--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -68,6 +68,7 @@ title: Index
 * [AWS](aws-cpi.html)
     * [Using IAM instance profiles](aws-iam-instance-profiles.html)
     * [Using instance storage](aws-instance-storage.html)
+    * [Creating IAM users](aws-iam-users.html)
 * [OpenStack](openstack-cpi.html)
     * [Using Keystone v3 API](openstack-keystonev3.html)
     * [Extended Registry configuration](openstack-registry.html)
