--- a/aws-iam-users.html.md.erb
+++ b/aws-iam-users.html.md.erb
@@ -2,7 +2,7 @@
 title: Creating IAM Users
 ---
 
-## <a id="create"></a> Creating new use user
+## <a id="create"></a> Creating new IAM user
 
 1. Log into the AWS console: [https://console.aws.amazon.com/console/home](https://console.aws.amazon.com/console/home).
 
