added common errors

--- a/job-logs.html.md.erb
+++ b/job-logs.html.md.erb
@@ -70,6 +70,8 @@ The Agent stores logs in `/var/vcap/bosh/log/` and outputs most recent content t
 $ sudo tail -f -n 200 /var/vcap/bosh/log/current
 </pre>
 
+<p class="note">Note: Agent logs are only accessible to the root user.</p>
+
 ---
 ### <a id="log-rotation"></a> Log rotation
 
