add missing aws step

--- a/aws-iam-users.html.md.erb
+++ b/aws-iam-users.html.md.erb
@@ -34,6 +34,8 @@ title: Creating IAM Users
 
     <%= image_tag("images/deploy-microbosh-to-aws/attach-iam-policy.png") %>
 
+1. Choose **Custom Policy**.
+
 1. Add a policy configuration for the chosen user and click **Apply Policy**.
 
     <%= image_tag("images/deploy-microbosh-to-aws/add-iam-inline-policy.png") %>
