Small tweaks to verbiage: quantities & gerunds.
Signed-off-by: Shatarupa Nandi <snandi@pivotal.io>

--- a/init-vcloud.html.md.erb
+++ b/init-vcloud.html.md.erb
@@ -14,7 +14,7 @@ This document shows how to initialize new [environment](terminology.html#environ
 
 1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
 
-    <p class="note"><strong>Note</strong>: The example below uses several predefined password. We recommend to replace them with passwords of your choice.</p>
+    <p class="note"><strong>Note</strong>: The example below uses several predefined passwords. We recommend replacing them with passwords of your choice.</p>
 
 <pre>
 ---
